@@ -1,3 +1,7 @@
+2013-01-14  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Asterisk 1.8.20.0 Released.
+
 2013-01-09  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Asterisk 1.8.20.0-rc2 Released.
